--- a/src/app/home.css
+++ b/src/app/home.css
@@ -19,6 +19,16 @@
   height: 100%;
 }
 
+.hero-img video {
+  image-rendering: optimizeQuality;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-transform: perspective(1px) translateZ(0);
+  -moz-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+}
+
 .hero-img-gradient {
   position: absolute;
   top: 0;
