--- a/src/app/home.css
+++ b/src/app/home.css
@@ -329,8 +329,11 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(2);
-  transform-origin: top top;
+  transform-origin: center center;
   will-change: transform;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .case-studies-item-inner-img {
