--- a/src/app/mobile.css
+++ b/src/app/mobile.css
@@ -87,6 +87,25 @@
     padding: 1em 0;
   }
 
+  .marquee {
+    padding: 40px 0;
+  }
+
+  .marquee-content {
+    gap: 60px;
+    padding-right: 60px;
+    justify-content: center;
+  }
+
+  .logo-item {
+    height: 80px;
+    transform: scale(1.3);
+  }
+
+  .logo-item img {
+    transform: scale(1.2);
+  }
+
   .marquee-content h2 {
     font-size: 2rem;
   }
