--- a/src/app/mobile.css
+++ b/src/app/mobile.css
@@ -71,8 +71,8 @@
     object-fit: contain !important;
     width: 100% !important;
     height: 100% !important;
-    object-position: center center !important;
-    transform: scale(1.7) !important;
+    object-position: center bottom !important;
+    transform: scale(2.5) translateY(10%) !important;
   }
 
   .hero-img {
@@ -332,7 +332,7 @@
   }
 
   .hero video {
-    transform: scale(1.5) !important;
+    transform: scale(2.2) translateY(10%) !important;
   }
 
   .case-studies-header h2,
