--- a/src/app/mobile.css
+++ b/src/app/mobile.css
@@ -50,16 +50,17 @@
 
   .hero h1 {
     font-size: 4rem;
-    line-height: 1.1;
+    line-height: 1;
     padding: 0 1rem;
     text-align: center;
     position: relative;
     z-index: 2;
     font-weight: 700;
+    white-space: normal;
   }
 
   .hero h1 br {
-    display: block;
+    display: block !important;
   }
 
   .hero-copy {
@@ -77,7 +78,7 @@
     width: 100% !important;
     height: 100% !important;
     object-position: center center !important;
-    transform: scale(2.8) !important;
+    transform: scale(2.0) !important;
   }
 
   .hero-img {
@@ -337,7 +338,7 @@
   }
 
   .hero video {
-    transform: scale(2.5) !important;
+    transform: scale(2.0) !important;
   }
 
   .case-studies-header h2,
