--- a/src/app/home.css
+++ b/src/app/home.css
@@ -19,6 +19,23 @@
   height: 100%;
 }
 
+.hero-img::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 150px;
+  background: linear-gradient(to bottom,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0.3) 40%,
+    rgba(0, 0, 0, 0.7) 70%,
+    rgba(0, 0, 0, 0.9) 90%,
+    rgba(0, 0, 0, 1) 100%);
+  pointer-events: none;
+  z-index: 1;
+}
+
 .hero-img video {
   image-rendering: optimizeQuality;
   -webkit-backface-visibility: hidden;
